--- a/client/src/app/website/website-promobox.component.html
+++ b/client/src/app/website/website-promobox.component.html
@@ -6,8 +6,8 @@
             <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
         </div>
         <dl class="dl-horizontal">
-            <dt>Name</dt>
-            <dd>{{model.Name}}</dd>
+            <!--<dt>Name</dt>
+            <dd>{{model.Name}}</dd>-->
             <dt>CdEnvironmentId</dt>
             <dd>{{model.CdEnvironmentId}}</dd>
             <dt>EnvironmentPurpose</dt>
