--- a/client/src/app/environment-selection/environment-selection-edit.component.html
+++ b/client/src/app/environment-selection/environment-selection-edit.component.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="text" [(ngModel)]="model.CoreServiceEndpoint.Password" placeholder="Password" name="c-password" required  />
+                    <input type="password" [(ngModel)]="model.CoreServiceEndpoint.Password" placeholder="Password" name="c-password" required  />
                 </div>
                 <button type="button"  class="btn btn-success"  [disabled]="!editForm.form.valid" (click)="saveOrUpdate()" aria-label="Save">Save</button>
              </form>
