--- a/client/src/app/shared/popup/delete-window.component.html
+++ b/client/src/app/shared/popup/delete-window.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title pull-left">Delete Topology Item ({{model.Id}})?</h4>
+            <h4 class="modal-title pull-left">Delete Item ({{model.Id}})?</h4>
             <button type="button" class="close pull-right" aria-label="Close" (click)="smModal.hide()">
             <span aria-hidden="true">&times;</span>
             </button>
