--- a/client/src/app/cmenvironment/cmenvironment-edit.component.html
+++ b/client/src/app/cmenvironment/cmenvironment-edit.component.html
@@ -19,6 +19,10 @@
                     <input [(ngModel)]="model.WebsiteRootUrl" name="WebsiteRootUrl" placeholder="WebsiteRootUrl" required />
                 </div>
                 <div class="form-group">
+                    <label>CoreServiceUrl</label>
+                    <input [(ngModel)]="model.CoreServiceRootUrl" name="CoreService" placeholder="CoreService" required />
+                </div>
+                <div class="form-group">
                     <label>UserName</label>
                     <input [(ngModel)]="model.CoreServiceCredentials.UserName" placeholder="UserName" required name="UserName" />
                 </div>
@@ -26,8 +30,6 @@
                     <label>Password</label>
                     <input type="password" [(ngModel)]="model.CoreServiceCredentials.Password" placeholder="Password" required name="password" />
                 </div>
-
-                <!--<button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>-->
                 <button type="button"  class="btn btn-success"  [disabled]="!editForm.form.valid" (click)="saveOrUpdate()" aria-label="Save">Save</button>
              </form>
             </div>
