--- a/client/src/scss-base/_base.scss
+++ b/client/src/scss-base/_base.scss
@@ -1,4 +1,4 @@
-$font-stack:    Helvetica, sans-serif;
+$font-stack: "Helvetica Neue",Helvetica,Arial,sans-serif;
 $primary-color: #333;
 
 $background-color: #484f45;
