--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,38 @@
-<app-nav-container></app-nav-container>
-<messages></messages>
-<router-outlet></router-outlet>
+<nav class="navbar navbar-default navbar-static-top m-b-0">
+  <div class="navbar-header">
+      <div class="top-left-part">
+        <a class="navbar-brand" href="#">G4TM</a>
+      </div>
+      <div class="container-fluid">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      </button>
+
+      <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right navbar-top-links">
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Settings</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Help</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+          <input type="text" class="form-control" placeholder="Search...">
+          </form>
+      </div>
+      </div>
+  </div>
+</nav>
+<app-nav-container class="sidebar"></app-nav-container>
+<div class="page-wrapper">
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-sm-9 col-md-9 main">
+              <router-outlet></router-outlet>
+          </div>
+      </div>
+  <messages></messages>
+  </div>
+</div>
