--- a/client/src/app/cdenvironment/cdenvironment-overview.component.html
+++ b/client/src/app/cdenvironment/cdenvironment-overview.component.html
@@ -1,17 +1,9 @@
-<div class="container">
-    <div class="row">
-        <h1>{{title}}</h1>
-    </div>
-</div>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-success pull-right"(click)="envEdit.show()">Add</button>
-        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-    </div>
-</div>
-<cd-env-edit #envEdit></cd-env-edit>
-<div class="container">
-    <div class="row">
-        <cd-environment-promobox BackgroundHighlight="lightblue" *ngFor="let item of ViewCollection" [Model]="item"></cd-environment-promobox>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+      <h1>{{title}}</h1>
+      <button type="button" class="btn btn-success pull-right"(click)="envEdit.show()">Add</button>
+      <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+      <cd-env-edit #envEdit></cd-env-edit>
+      <cd-environment-promobox BackgroundHighlight="lightblue" *ngFor="let item of ViewCollection" [Model]="item"></cd-environment-promobox>
+  </div>
 </div>
