--- a/client/src/app/topologytype/topologytype-overview.component.html
+++ b/client/src/app/topologytype/topologytype-overview.component.html
@@ -1,17 +1,12 @@
-<div class="container">
-    <div class="row">
-        <h1>{{title}}</h1>
-    </div>
-</div>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-success pull-right"(click)="topoEdit.show()">Add</button>
-        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-    </div>
-</div>
-<topologytype-edit #topoEdit></topologytype-edit>
-<div class="container">
-    <div class="row">
-         <topologytype-promobox *ngFor="let item of ViewCollection" [Model]="item"></topologytype-promobox>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+      <h1>{{title}}</h1>
+
+      <button type="button" class="btn btn-success pull-right"(click)="topoEdit.show()">Add</button>
+      <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+
+      <topologytype-edit #topoEdit></topologytype-edit>
+
+        <topologytype-promobox *ngFor="let item of ViewCollection" [Model]="item"></topologytype-promobox>
+  </div>
 </div>
