--- a/client/src/app/webapplication/webapplication-overview.component.html
+++ b/client/src/app/webapplication/webapplication-overview.component.html
@@ -1,17 +1,13 @@
-<div class="container">
-    <div class="row">
-        <h1>{{title}}</h1>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h1>{{title}}</h1>
+
+    <button type="button" class="btn btn-success pull-right" (click)="webappedit.show()">Add</button>
+    <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection"></search>
+
+    <webapplication-edit #webappedit></webapplication-edit>
+
+    <webapplication-promobox *ngFor="let item of ViewCollection" [Model]="item"></webapplication-promobox>
+  </div>
 </div>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-success pull-right"(click)="webappedit.show()">Add</button>
-        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-    </div>
-</div>
-<webapplication-edit #webappedit></webapplication-edit>
-<div class="container">
-    <div class="row">
-        <webapplication-promobox *ngFor="let item of ViewCollection" [Model]="item"></webapplication-promobox>
-    </div>
-</div>
+
