--- a/client/src/app/shared/search/search.component.html
+++ b/client/src/app/shared/search/search.component.html
@@ -1,5 +1,6 @@
 <button type="button" class="btn btn-primary"
-        (click)="isCollapsed = !isCollapsed">{{title}}
+        (click)="isCollapsed = !isCollapsed">
+<i class="icon-search"></i> {{title}}
 </button>
 <hr/>
 <div (collapsed)="collapsed($event)"
