--- a/client/src/app/topologytype/topologytype-edit.component.html
+++ b/client/src/app/topologytype/topologytype-edit.component.html
@@ -20,8 +20,8 @@
                     </div>
                      <div class="panel panel-success">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Environment Purposes</h3>
-                            <button type="button" class="icon-pencil pull-right" (click)="addPurpose()">Add</button>
+                            <h3 class="panel-title">Environment Purposes <button type="button" class="icon-pencil pull-right" (click)="addPurpose()">Add</button></h3>
+
                         </div>
                         <ul class="list-group">
                             <li *ngFor="let purpose of model.EnvironmentPurposes; let i = index; trackBy:customTrackBy;" class="list-group-item">
