--- a/client/src/app/cdenvironment/cdenvironment-promobox.component.html
+++ b/client/src/app/cdenvironment/cdenvironment-promobox.component.html
@@ -1,10 +1,14 @@
      <div *ngIf="model"  class="col-sm-6 ">
-        <div class="panel panel-success">
+        <div class="panel panel-primary">
             <div class="panel-heading">
-                <strong>CdEnvironment ({{model.Id}})</strong>
-                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="envEdit.show()">Edit</button>
-                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
+                <h4>
+                  CdEnvironment ({{model.Id}})
+
+                <button *ngIf="showActionButtons" type="button" class="btn btn-default pull-right btn-sm" (click)="envEdit.show()">Edit</button>
+                <button *ngIf="showActionButtons" type="button" class="btn btn-default pull-right btn-sm" (click)="deleteItem.show()">Delete</button>
+                </h4>
             </div>
+            <div class="panel-body">
             <dl class="dl-horizontal">
                 <dt>EnvironmentPurpose</dt>
                 <dd>{{model.EnvironmentPurpose}}</dd>
@@ -17,6 +21,7 @@
                 <dt *ngIf="model.Credentials.ClientId">ClientId</dt>
                 <dd *ngIf="model.Credentials.ClientId">{{model.Credentials.ClientId}}</dd>
             </dl>
+            </div>
         </div>
     <cd-env-edit #envEdit [Model]="model"></cd-env-edit>
     <delete-item #deleteItem [Model]="model" (onDelete)="delete($event)"></delete-item>
