--- a/client/src/app/topologytype/topologytype-promobox.component.html
+++ b/client/src/app/topologytype/topologytype-promobox.component.html
@@ -1,10 +1,13 @@
 <div *ngIf="model" class="col-sm-6 ">
-    <div class="panel panel-success">
+    <div class="panel panel-primary">
         <div class="panel-heading">
-            <strong>TopologyType ({{model.Id}})</strong>
-            <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="topologyEdit.show()">Edit</button>
-            <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
+          <h4>
+            TopologyType ({{model.Id}})
+            <button *ngIf="showActionButtons" type="button" class="btn btn-default pull-right btn-sm" (click)="topologyEdit.show()">Edit</button>
+            <button *ngIf="showActionButtons" type="button" class="btn btn-default pull-right btn-sm" (click)="deleteItem.show()">Delete</button>
+          </h4>
         </div>
+        <div class="panel-body">
         <dl class="dl-horizontal">
             <dt>Name</dt>
             <dd>{{model.Name}}</dd>
@@ -18,6 +21,7 @@
                     <span>{{env}}</span>
                 </li>
             </ul>
+        </div>
         </div>
     </div>
     <topologytype-edit #topologyEdit [Model]="model"></topologytype-edit>
