--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,24 +4,14 @@
         <a class="navbar-brand" href="#">G4TM</a>
       </div>
       <div class="container-fluid">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
 
-      <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right navbar-top-links">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search...">
-          </form>
-      </div>
+       <env-select-nav></env-select-nav>     
       </div>
   </div>
 </nav>
