--- a/client/src/app/environment-selection/environment-selection-nav.component.html
+++ b/client/src/app/environment-selection/environment-selection-nav.component.html
@@ -1,6 +1,8 @@
 <div id="navbar" class="navbar-collapse collapse">
-    <span>{{currentEnvironment}}</span>
+    <h4 class="navbar-text">{{currentEnvironment}}</h4>
     <ul class="nav navbar-nav navbar-right navbar-top-links">
+      <li>
         <a routerLink="{{navItem.path}}" routerLinkActive="active" [skipLocationChange]="true">{{navItem.title}} </a>
+      </li>
     </ul>
 </div>
